# LC-3Emulator

./: CMakeLists.txt  README.md
include/: Controller.h
include/Assembler/: Assembler.h  Encoder.h  InstructionSet.h  Parser.h  SymbolTable.h  keyword.h
include/Simulator/: Decoder.h  LC3Emulator.h  Memory.h  RegisterFile.h
include/Simulator/Instructions/: AddInstruction.h  AndInstruction.h  BrInstruction.h  HaltInstruction.h  Instruction.h  JmpInstruction.h  JsrInstruction.h  JsrrInstruction.h  LdInstruction.h  LdiInstruction.h  LdrInstruction.h  LeaInstruction.h  NotInstruction.h  RtiInstruction.h  StInstruction.h  StiInstruction.h  StrInstruction.h  TrapInstruction.h
sample/: blur.asm  input.asm  stack.asm
src/: Controller.cpp  main.cpp
src/Assembler/: Assembler.cpp  Encoder.cpp  InstructionSet.cpp  Parser.cpp  SymbolTable.cpp  keyword.cpp
src/Simulator/: Decoder.cpp  LC3Emulator.cpp  Memory.cpp  RegisterFile.cpp
src/Simulator/Instructions/: AddInstruction.cpp  AndInstruction.cpp  BrInstruction.cpp  HaltInstruction.cpp  JmpInstruction.cpp  JsrInstruction.cpp  JsrrInstruction.cpp  LdInstruction.cpp  LdiInstruction.cpp  LdrInstruction.cpp  LeaInstruction.cpp  NotInstruction.cpp  RtiInstruction.cpp  StInstruction.cpp  StiInstruction.cpp  StrInstruction.cpp  TrapInstruction.cpp
tests/: CMakeLists.txt  TestAssembler.cpp  TestController.cpp  TestEncoder.cpp  TestInstructionSet.cpp  TestLC3Emulator.cpp  TestMemory.cpp  TestParser.cpp  TestRegisterFile.cpp  TestSymbolTable.cpp
